# bare-server-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: Server.cpp  Server.h  Serving.cpp  Serving.h  config.h  config.h.in  instance_info.cpp  instance_info.h  main.cpp  memory.cpp  memory.h  process_memory.cpp  serialize_string.cpp  serialize_string.h
src/api/: instance_info.cpp  instance_info.h  routes.cpp  routes.h
src/api/v1/: v1_http_headers.cpp  v1_http_headers.h  v1_http_proxy.cpp  v1_http_proxy.h  v1_ws_meta.cpp  v1_ws_meta.h
